Share button spacing fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -428,6 +428,7 @@ div.event datetime#date {
 div.event datetime#date:hover + a.edit#edit_date, div.event a.edit#edit_date:hover {
 	display: inline-block !important;
 	vertical-align: bottom;
+	margin-right: 1rem;
 	position: relative;
 	top: 4px;
 }
